--- a/product/create.html
+++ b/product/create.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Create</title>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+
 
 </head>
 <body>
 <h2>CREAT PRODUCT</h2>
 <a href="list.html">Back</a>
 <p id="message" style="color: blue;display: none">Create success!</p>
+<div id="imgDiv"></div>
+<div id="create"></div>
 <table>
     <tr>
         <td>Name</td>
@@ -29,10 +34,9 @@
     </tr>
     <tr>
         <td>IMAGE</td>
-        <td><input type="text" id="img"></td>
+        <td><input type="file" value="upload" accept=".jpg" id="img"></td>
     </tr>
     <tr>
-
         <td colspan="2" align="center">
             <button id="button">Create</button></td>
     </tr>
@@ -40,29 +44,33 @@
 
 
 </body>
+<script src="../upload-file/upload-products.js"></script>
 <script>
     $(document).ready(function (){
+        let imgProduct = {};
         $('#button').click(function (){
+
+            let avatar = resultImage();
+            imgProduct.avatar = avatar;
             let productCreate = {
 
                 name: $('#name').val(),
                 price: $('#price').val(),
                 description: $('#desc').val(),
                 manufacture: $('#manuf').val(),
-                image: $('#img').val()
+                image: document.getElementById("imgProduct").src
+
 
             }
-            console.log(JSON.stringify(productCreate))
-            $.ajax({
-                url:'http://localhost:8080/api/products/',
-                method:'POST',
 
+            $.ajax({
+                url:'https://threephoneshop.herokuapp.com/api/products/create',
+                method:'POST',
                 contentType:'application/Json; charset=UTF-8',
                 data: JSON.stringify(productCreate),
-
+                headers : {'Authorization': 'Bearer '+window.localStorage.getItem('TOKEN_KEY')},
                 success:function (){
                     $('#message').show();
-
                 },
                 error: function (){
                     document.getElementById('create').innerHTML = "Error "
