--- a/product/delete.html
+++ b/product/delete.html
@@ -55,7 +55,7 @@
     })
     function getProduct(){
         $.ajax({
-            url:'http://localhost:8080/api/products/'+id,
+            url:'https://threephoneshop.herokuapp.com/api/products/'+id,
             method:'GET',
             contentType:'application/Json; charset=UTF-8',
             success: function (data){
@@ -82,7 +82,7 @@
             idCategory: $('#category').val()
         }
         $.ajax({
-            url:'http://localhost:8080/api/products/'+id,
+            url:'https://threephoneshop.herokuapp.com/api/products/'+id,
             method:'DELETE',
             data: JSON.stringify(product),
             contentType:'application/Json; charset=UTF-8',
