--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </nav>
 <!-- Header-->
 <header>
-    <div>
+    <div style="position: relative">
         <img style="width: 1349px;height: 350px" src="file/three.gif">
     </div>
 </header>
@@ -133,6 +133,8 @@
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="">View options</a></div>
                         <div class="text-center"><button type="submit" onclick="addItems(${pr.id})">Add Cart</button></div>
+                        <div><a href="product/edit.html?id=${pr.id}"><button>edit</button></a></div>
+                        <div><a href="product/detail.html?id=${pr.id}"><button>Detail</button></a></div>
                     </div>
                 </div>
             </div>
@@ -147,7 +149,7 @@
                 }
                 //so trang hien tai tren tong so trang
                 $('#page').append(`
-                ${data.number + 1} / ${data.totalPages}
+                      ${data.number + 1} / ${data.totalPages}
                 `)
                 if (!data.last) {
                     $('#page').append(`<button onclick="nextPage()">Next</button>`)
@@ -170,7 +172,7 @@
 
     }
 
-    let url1 = 'https://threephoneshop.herokuapp.com/api/categories';
+    let url1 = 'http://localhost:8080/api/categories';
 
     function getCategory() {
         $.ajax({
@@ -182,7 +184,7 @@
                 console.log(categories)
                 let name = ""
                 for (const category of categories) {
-                    name += `<li style="text-align: center"><a className="dropdown-item" href="${category.id}">${category.name}</a></li>`
+                    name += `<li style="text-align: center"><a className="dropdown-item" href="category/categoy_product.html?id=${category.id}">${category.name}</a></li>`
                 }
                 document.getElementById("tbody1").innerHTML = name;
             },
@@ -198,9 +200,11 @@
         let items = {};
         let product = {};
         product.id = id;
+        console.log(product)
         let arrProduct = [];
         arrProduct.push(product);
         items.products = arrProduct;
+        console.log(items)
         let itemsOBJ = JSON.stringify(items);
         console.log('item --> ', itemsOBJ)
         $.ajax({
