--- a/product/delete.html
+++ b/product/delete.html
@@ -82,7 +82,7 @@
             idCategory: $('#category').val()
         }
         $.ajax({
-            url:'https://threephoneshop.herokuapp.com/api/products/'+id,
+            url:'http://localhost:8080/api/products/'+id,
             method:'DELETE',
             data: JSON.stringify(product),
             contentType:'application/Json; charset=UTF-8',
