--- a/shoppingcart/cart.html
+++ b/shoppingcart/cart.html
@@ -96,7 +96,7 @@
     })
 
     function getShoppingCart() {
-        $ajax({
+        $.ajax({
             url: 'http://localhost:8080/api/oder/shoppingCart',
             headers: {'Authorization': 'Bearer' + window.localStorage.getItem('TOKEN_KEY')},
             method: 'GET',
@@ -105,6 +105,7 @@
                 console.log("co vào success k =====>")
                 let responseDTO = data.connect
                 console.log(responseDTO)
+                console.log(data)
             }
         })
 
